--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title>Тестовое задание 2</title>
+<title>Тестовое задание 2 1</title>
 </head>
 <body>
 <h1> Hi, guys !!!</h1>
