--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>Тестовое задание 2 1</title>
 </head>
 <body>
-<h1>КУ ---  Hi, guys !!!</h1>
+<h1>КУ7 ---  Hi, guys !!!</h1>
 <div><img src="chuck-norris.jpg"></img></div>
 </body>
 </html>
