--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>Тестовое задание 2</title>
 </head>
 <body>
-<h1 style="color: blue;">TEST -  Hi, guys !!!</h1>
+<h1 style="color: blue;">TEST11 -  Hi, guys !!!</h1>
 <div><img src="chuck-norris.jpg"></img></div>
 </body>
 </html>
